# cloth

./: .gitignore  Cargo.toml  LICENSE  README.md
patterns/extract_wisdom/: pattern.md
patterns/humanize/: pattern.md
patterns/improve_prompt/: pattern.md
patterns/summarize/: pattern.md
src/: main.rs
src/agentic/: agent.rs  history.rs  mod.rs  response.rs
src/agentic/tools/: calculator.rs  file_manager.rs  mod.rs  tool.rs
src/commands/: agenticc.rs  configc.rs  mod.rs  openwebui.rs  pattern.rs
src/consts/: prompts.rs
src/integrations/: mod.rs
src/integrations/openwebui/: mod.rs  openwebui_service.rs  openwebui_structs.rs
src/managers/: agentic_manager.rs  app_manager.rs  mod.rs
src/utils/: config.rs  env_utils.rs  mod.rs  text_extraction.rs
teams/development/: code_writer.json  development_manager.json  devops_engineer.json  documentation_specialist.json  system_architect.json
teams/generic/: generic_task_specialist.json  generic_team_lead.json  problem_solver.json  process_optimizer.json
teams/security/: penetration_tester.json  security_analyst.json  security_consultant.json  security_team_lead.json
