[package]
name = "nexus"
version = "0.1.0"
edition = "2024"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
incremental = true
# Set this to 1 or 2 to get more useful backtraces in the debugger.
debug = 0
opt-level = 3

[dependencies]
clap = { version="4.5.39" , features = ["env","derive"]}
dirs = { version = "6.0.0" }
eyre = { version = "0.6.12" }
http = { version = "1.3.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140"}
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
ureq = { version = "3.0.11", features = ["json", "charset"]}